--- a/assets/style.css
+++ b/assets/style.css
@@ -26,21 +26,6 @@ body {
   position: relative;
 }
 
-.carousel-item {
-  position: relative;
-}
-
-.carousel-item::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  pointer-events: none;
-}
 .nav ul {
   display: flex;
   list-style-type: none;
@@ -240,7 +225,7 @@ form {
 
 form input {
   width: 100%;
-  background-color: transparent;
+  background-color: #fff;
   border: solid 1px;
   height: 2.5em;
   margin-bottom: 20px;
@@ -248,7 +233,7 @@ form input {
 
 form textarea {
   width: 100%;
-  background-color: transparent;
+  background-color: #fff;
   border: solid 1px;
   height: 5em;
   line-height: 2.5em;
